conexão com banco mysql ok

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,18 @@ version: '3.7'
 
 services:
   database-checkout:
-    image: mysql
+    image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD: "admin"
+#      MYSQL_ROOT_PASSWORD: "admin"
       MYSQL_ROOT_USER: "root"
       MYSQL_DATABASE: "checkout"
     container_name: db-checkout
     ports:
-      - 3306:3306
+      - 3307:3307
     volumes:
       - /home/hilton/Docker/Volumes/MySql:/var/lib/mysql
     restart: always
+    cap_add:
+      - SYS_NICE  # CAP_SYS_NICE
+    security_opt:
+      - seccomp:unconfined
