--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/checkout
-    usarname: root
-    password: admin
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/checkout?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true #jdbc:mysql://172.23.0.2:3306/checkout
+    usarname: hilton
+    password:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     hikari:
       connection-test-query: select 1
   jpa:
