--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/checkout?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true #jdbc:mysql://172.23.0.2:3306/checkout
+    url: jdbc:mysql://localhost:3306/checkout?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
     usarname: hilton
-    password:
+    password: admin
     driverClassName: com.mysql.cj.jdbc.Driver
     hikari:
       connection-test-query: select 1
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update #create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
